--- a/ASP.NET example/WebApplication1/WebApplication2/WebApplication2.csproj
+++ b/ASP.NET example/WebApplication1/WebApplication2/WebApplication2.csproj
@@ -236,7 +236,7 @@
     <Compile Include="Services\SchoolService.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModelBuilders\AddStudentBuilder.cs" />
-    <Compile Include="ViewModels\StudentViewModel.cs" />
+    <Compile Include="ViewModelBuilders\ViewModels\StudentViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
