Added test task

--- a/ASP.NET example/WebApplication1/WebApplication2/bin/WebApplication2.dll.config
+++ b/ASP.NET example/WebApplication1/WebApplication2/bin/WebApplication2.dll.config
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-	  <!--<add name="DefaultConnection" connectionString="Data Source=appdb.co6sqmpgl9xh.eu-west-1.rds.amazonaws.com;Initial Catalog=SIS;user id=admin;password=BusyWork(9;"  providerName="System.Data.SqlClient" />-->
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebApplication2-20171019103058.mdf;Initial Catalog=aspnet-WebApplication2-20171019103058;Integrated Security=True" providerName="System.Data.SqlClient" />
+	  <add name="DefaultConnection" connectionString="Data Source=appdb.co6sqmpgl9xh.eu-west-1.rds.amazonaws.com;Initial Catalog=SIS;user id=admin;password=BusyWork(9;"  providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebApplication2-20171019103058.mdf;Initial Catalog=aspnet-WebApplication2-20171019103058;Integrated Security=True" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
